# Automotive-Invoicing-Application

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.EC0C2B0EE5016CEC.idx  mainwindow.cpp.10A1E15AFEDA3389.idx  mainwindow.h.D35D0097A3C42432.idx
schema/: createDatabase.sql  generateTestData.sql
src/: main.cpp
src/sql/: sqlObjects.hpp  sqlQueries.hpp  sqlRawToDate.hpp  sqlTables.hpp
src/ui/: mainwindow.ui
tests/: databaseTests.cpp
